jhsdb dumps core on Solaris 12 when loading dumped core

XMLWordPrintable

    • b146
    • x86
    • solaris_12
    • Verified

        Attaching to core ./jdk_core/JTwork/classes/2/closed/javax/crypto/CryptoPermission/core from executable /pool/home/alanbur/jdk/jdk9repo/build/solaris-x86_64-normal-server-fastdebug/images/jdk/bin/java, please wait...
        Debugger attached successfully.
        Server compiler detected.
        JVM version is 9-internal+0-2016-08-16-222712.alanbur.jdk9repo
        Deadlock Detection:

        No deadlocks found.

        ----------------- t@1 -----------------
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0xffff80febdd2e2d1, pid=19443, tid=2
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0) (fastdebug build 9-internal+0-2016-08-16-222712.alanbur.jdk9repo)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 9-internal+0-2016-08-16-222712.alanbur.jdk9repo, mixed mode, tiered, compressed oops, g1 gc, solaris-amd64)
        # Problematic frame:
        # C [libproc.so.1+0x2e2d1] i_Plookup_by_addr+0x181
        #
        # Core dump will be written. Default location: /pool/home/alanbur/jdk/jdk9repo/build/solaris-x86_64-normal-server-fastdebug/testoutput/core or core.19443
        #
        # An error report file with more information is saved as:
        # /pool/home/alanbur/jdk/jdk9repo/build/solaris-x86_64-normal-server-fastdebug/testoutput/hs_err_pid19443.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        # The crash happened outside the Java Virtual Machine in native code.
        # See problematic frame for where to report the bug.
        #
        Current thread is 2
        Dumping core ...

        ------------ lwp# 2 / thread# 2 ---------------
         ffff80ffbee5254a __lwp_sigqueue () + a
         ffff80ffbed83e09 raise () + 19
         ffff80ffbed4f2d1 abort () + d1
         ffff80ffa66f80e5 void os::abort(bool,void*,const void*) () + 215
         ffff80ffa6a5daf0 void VMError::report_and_die(int,const char*,const char*,__va_list_element*,Thread*,unsigned char*,void*,void*,const char*,int,unsigned long) () + 1850
         ffff80ffa6a5c232 void VMError::report_and_die(Thread*,const char*,int,const char*,const char*,__va_list_element*) () + 42
         ffff80ffa5da0f79 void report_vm_error(const char*,int,const char*,const char*,...) () + f9
         ffff80ffa6707b92 frame os::get_sender_for_C_frame(frame*) () + 72
         ffff80ffa5da5710 void print_native_stack(outputStream*,frame,Thread*,char*,int) () + 210
         ffff80ffa6a5a8e1 void VMError::report(outputStream*,bool) () + 10c1
         ffff80ffa6a5cb83 void VMError::report_and_die(int,const char*,const char*,__va_list_element*,Thread*,unsigned char*,void*,void*,const char*,int,unsigned long) () + 8e3
         ffff80ffa6a5c0af void VMError::report_and_die(Thread*,unsigned,unsigned char*,void*,void*,const char*,...) () + bf
         ffff80ffa6a5c0e2 void VMError::report_and_die(Thread*,unsigned,unsigned char*,void*,void*) () + 22
         ffff80ffa6709611 JVM_handle_solaris_signal () + 1751
         ffff80ffa6701eef signalHandler () + 2f
         ffff80ffbee4b936 __sighndlr () + 6
         ffff80ffbee3ceb1 call_user_handler () + 2f1
         ffff80ffbee3d2ce sigacthandler (b, ffff80ffbf76be70, ffff80ffbf76b7c0) + de
         --- called from signal handler with signal 11 (SIGSEGV) ---
         ffff80febdd2e2d1 i_Plookup_by_addr () + 181
         ffff80febdd2e3ac Plookup_by_addr () + 2c
         ffff80feb9a08cba Java_sun_jvm_hotspot_debugger_proc_ProcDebuggerLocal_lookupByAddress0 () + 9a (saproc.cpp:1239)
         ffff80ff9482d17d * sun/jvm/hotspot/debugger/proc/ProcDebuggerLocal.lookupByAddress0(J)Lsun/jvm/hotspot/debugger/cdbg/ClosestSymbol;+-18896
         ffff80ff9480b520 * sun/jvm/hotspot/debugger/proc/ProcDebuggerLocal.lookup(J)Lsun/jvm/hotspot/debugger/cdbg/ClosestSymbol;+-13968 (line 989)
         ffff80ff9480b5f6 * sun/jvm/hotspot/debugger/proc/ProcCFrame.closestSymbolToPC()Lsun/jvm/hotspot/debugger/cdbg/ClosestSymbol;+1872 (line 94)
         ffff80ff9480b5f6 * sun/jvm/hotspot/tools/PStack.run(Ljava/io/PrintStream;Lsun/jvm/hotspot/debugger/Debugger;)V+7024 (line 258)
         ffff80ff9480b7a3 * sun/jvm/hotspot/tools/PStack.run(Ljava/io/PrintStream;)V+7344 (line 116)
         ffff80ff9480b7a3 * sun/jvm/hotspot/tools/PStack.run()V+7616 (line 107)
         ffff80ff9480b7a3 * sun/jvm/hotspot/tools/JStack.run()V+23384 (line 127)
         ffff80ff9480b7a3 * sun/jvm/hotspot/tools/Tool.startInternal()V+16368 (line 502)
         ffff80ff9480b7a3 * sun/jvm/hotspot/tools/Tool.start([Ljava/lang/String;)I+17560 (line 453)
         ffff80ff9480b1e0 * sun/jvm/hotspot/tools/Tool.execute([Ljava/lang/String;)V+18152 (line 242)
         ffff80ff9480b7a3 * sun/jvm/hotspot/tools/JStack.runWithArgs([Ljava/lang/String;)V+23648 (line 191)
         ffff80ff9480b7a3 * sun/jvm/hotspot/tools/JStack.main([Ljava/lang/String;)V+23368 (line 190)
         ffff80ff9480b7a3 * sun/jvm/hotspot/SALauncher.runJSTACK([Ljava/lang/String;)V+-28224 (line 483)
         ffff80ff9480b7a3 * sun/jvm/hotspot/SALauncher.main([Ljava/lang/String;)V+-30648 (line 902)
         ffff80ff94800cf1 * sun/jvm/hotspot/SALauncher.main([Ljava/lang/String;)V+-29376 (line 902)
         ffff80ffa610da81 void JavaCalls::call_helper(JavaValue*,const methodHandle&,JavaCallArguments*,Thread*) () + 621
         ffff80ffa61d4067 void jni_invoke_static(JNIEnv_*,JavaValue*,_jobject*,JNICallType,_jmethodID*,JNI_ArgumentPusher*,Thread*) () + 4b7
         ffff80ffa61faa5e jni_CallStaticVoidMethod () + 51e
         ffff80ffa6f0955e JavaMain () + 30e (java.c:508)
         ffff80ffbee4b534 _thrp_setup () + a4
         ffff80ffbee4b810 _lwp_start ()

        --------------- T H R E A D ---------------

        Current thread (0x0000000000529000): JavaThread "main" [_thread_in_native, id=2, stack(0xffff80ffbf66d000,0xffff80ffbf76d000)]

        Stack: [0xffff80ffbf66d000,0xffff80ffbf76d000], sp=0xffff80ffbf76bff0, free space=1019k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        C [libproc.so.1+0x2e2d1] i_Plookup_by_addr+0x181
        C [libproc.so.1+0x2e3ac] Plookup_by_addr+0x2c
        C [libsaproc.so+0x8cba] Java_sun_jvm_hotspot_debugger_proc_ProcDebuggerLocal_lookupByAddress0+0x9a
        j sun.jvm.hotspot.debugger.proc.ProcDebuggerLocal.lookupByAddress0(J)Lsun/jvm/hotspot/debugger/cdbg/ClosestSymbol;+0 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.debugger.proc.ProcDebuggerLocal.lookup(J)Lsun/jvm/hotspot/debugger/cdbg/ClosestSymbol;+6 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.debugger.proc.ProcCFrame.closestSymbolToPC()Lsun/jvm/hotspot/debugger/cdbg/ClosestSymbol;+17 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.tools.PStack.run(Ljava/io/PrintStream;Lsun/jvm/hotspot/debugger/Debugger;)V+157 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.tools.PStack.run(Ljava/io/PrintStream;)V+11 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.tools.PStack.run()V+4 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.tools.JStack.run()V+55 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.tools.Tool.startInternal()V+87 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.tools.Tool.start([Ljava/lang/String;)I+359 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.tools.Tool.execute([Ljava/lang/String;)V+4 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.tools.JStack.runWithArgs([Ljava/lang/String;)V+99 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.tools.JStack.main([Ljava/lang/String;)V+10 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.SALauncher.runJSTACK([Ljava/lang/String;)V+193 jdk.hotspot.agent@9-internal
        j sun.jvm.hotspot.SALauncher.main([Ljava/lang/String;)V+162 jdk.hotspot.agent@9-internal
        v ~StubRoutines::call_stub
        V [libjvm.so+0x1f0da81] void JavaCalls::call_helper(JavaValue*,const methodHandle&,JavaCallArguments*,Thread*)+0x621
        V [libjvm.so+0x1fd4067] void jni_invoke_static(JNIEnv_*,JavaValue*,_jobject*,JNICallType,_jmethodID*,JNI_ArgumentPusher*,Thread*)+0x4b7
        V [libjvm.so+0x1ffaa5e] jni_CallStaticVoidMethod+0x51e
        C [libjli.so+0x955e] JavaMain+0x30e
        C [libc.so.1+0x24b534] _thrp_setup+0xa4
        C [libc.so.1+0x24b810] _lwp_start+0x0

        [error occurred during error reporting (printing native stack), id 0xb]

              Assignee:
              Jini George (Inactive)
              Reporter:
              Alan Burlison
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: