8164383: jhsdb dumps core on Solaris 12 when loading dumped core Summary: Add the required extra parameters to Plookup_by_addr() and proc_arg_grab() as per the change to libproc with Solaris 12. Reviewed-by: sspitsyn